overflow corrected

--- a/src/components/SingleTodo/SingleTodo.css
+++ b/src/components/SingleTodo/SingleTodo.css
@@ -10,6 +10,7 @@
     border-radius: 5px;
     box-shadow: inset -2px -1px 5px 1px rgba(0, 0, 0, 0.531) ;
     transition: 0.2s;
+    max-width: 100%;
 }
 
 .single-todo:hover {
@@ -41,6 +42,9 @@
     border: none;
     padding: 5px;
     font-size: 20px;
+    width: 60%;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .todo-edit-text {
